--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,11 @@
 site_name: Few shot learning NLP
 nav:
   - Home: index.md
+  - Setfit : setfit.md
+  - Pattern Exploiting : pet.md
+  - Bio Technique: bio.md
+  - Focal Loss: loss.md
+  - Image documents transformer : images.md
+  - Train test split : train_test_split.md
 
 theme: readthedocs
