--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,9 +3,25 @@ nav:
   - Home: index.md
   - Setfit : setfit.md
   - Pattern Exploiting : pet.md
-  - Bio Technique: bio.md
+  - Classbite: bio.md
+  - ContaiNER: container.md
   - Focal Loss: loss.md
   - Image documents transformer : images.md
   - Train test split : train_test_split.md
+
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/katex.js
+  - https://unpkg.com/katex@0/dist/katex.min.js
+  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+extra_css:
+  - https://unpkg.com/katex@0/dist/katex.min.css
 
 theme: readthedocs
